<resources>
    <string name="app_name">TICKT</string>
    <string name="now_playing_detail">Easier to know what movies you can watch</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_skip">SKIP</string>
    <string name="btn_get_started">GET STARTED</string>
    <string name="pre_sale_detail">Book your favorite movie earlier</string>
    <string name="cashless_detail">You don’t worry to do transaction</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_create_account">CREATE NEW ACCOUNT</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="btn_sign_up">SIGN UP NOW</string>
    <string name="add_photo">Add Photo</string>
    <string name="save_and_next"><![CDATA[SAVE & NEXT]]></string>
    <string name="welcome">Welcome</string>
    <string name="now_playing">Now Playing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="profile">Profile</string>
    <string name="ticket">Ticket</string>
    <string name="home">Home</string>
    <string name="synopsis">Synopsis</string>
    <string name="btn_choose_seat">CHOOSE SEAT</string>
    <string name="choose_seat">Choose Seat</string>
    <string name="screen">Screen</string>
    <string name="tv_who_played">Who is Played</string>
    <string name="btn_buy_ticket">BUY TICKET</string>
    <string name="empty">Empty</string>
    <string name="booked">Booked</string>
    <string name="yours">Yours</string>
    <string name="btn_pay_now">PAY NOW</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="seats">Seats</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="btn_save_update"><![CDATA[SAVE & UPDATE]]></string>
    <string name="my_wallet">My Wallet</string>
    <string name="your_balance">Your Balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="history">History</string>
    <string name="btn_home">Home</string>
    <string name="btn_see_tickets">See the ticket(s)</string>
    <string name="hello_blank_fragment" />
</resources>